# innocuous

./: .env.example  .gitignore  LICENSE.txt  README.md  demo.txt  main.py  pyproject.toml  simple.py  two.py
.public-agdocs/conf/: agro.conf.yml
.public-agdocs/specs/: check-llm.md  cli-add.md  cli-numlogprobs.md  cvt-np.md  decode-accept-1.md  decode-branch.md  decode1.md  devsummary-task-a.md  devsummary-task-b.md  extra-args-test.md  fix-tests.md  integration-test.md  modelpath-env.md  prepost-filter-decode.md  softmax-simple.md  static-selections.md  type-main-funcs.md  update-examples.md  version-cmd.md
docs/: dev-summary.md
docs/showcase/: index.md
docs/tables/: how-it-works-v1.md
examples/: __init__.py  bitcoin_address.py  custom_prompts.py  random_data.py  simple-example.ipynb  visit-boston.sh
scripts/: cvt_md.py  launch-notebook.sh  md_input.txt  md_output.md
src/: core.py  main.py  utils.py
src/btc/: addr_codec.py
src/core/: decoder.py  encoder.py  trace.py
src/crypto/: __init__.py
src/examples/: bitcoin_address.py  custom_prompts.py  random_data.py
src/llm/: core.py  interface.py  tmp.py  utilities.py
src/steganography/: __init__.py  filters.py
src/stego/: basic.py  tmp.py  utils.py
stego_llm/: __init__.py  cli.py  main.py  main_legacy.py
stego_llm/core/: __init__.py  decoder.py  encoder.py  trace.py
stego_llm/crypto/: __init__.py  bitcoin.py
stego_llm/examples/: __init__.py  (+1 more)
tests/: test_cli.py  test_integration.py  test_simple.py
working/: book1.ipynb  book2.ipynb  one.py  three.py  vocab1.ipynb  vocab_mistral.txt
(+7 files in other folders)
