[project]
name = "innocuous"
version = "0.2.1"
description = "LLM steganography: encode and decode data in generated text"
readme = "README.md"
license = {text = "MIT"}
authors = [
  {name = "Will Sutton", email = "wsutton17@gmail.com"}
]
requires-python = ">=3.12"
dependencies = [
    "llama-cpp-python>=0.3.16",
]

[project.urls]
Homepage = "https://github.com/sutt/innocuous"

[project.scripts]
innocuous = "stego_llm.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["stego_llm"]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "pytest>=8.4.1",
    "pytest-mock",
]
publish = [
    "build>=1.2.2",
    "twine>=6.1.0",
]

[project.optional-dependencies]
dev = [
    "ipykernel>=6.30.1",
    "pytest>=8.4.1",
    "pytest-mock",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv.workspace]
members = [
    "bob",
]
